# ideal

./: CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: python-app.yml
examples/: minimal.cpp
include/: ideal.hpp
src/: ideal.cpp
tests/: test_ideal.py
