[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "ideal"
version = "0.1.1"
authors = [{ name = "Andrew Fowlie", email = "andrew.j.fowlie@gmail.com" }]
readme = "README.md"  
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]